:tiger::shirt: Updated in browser at strd6.github.io/editor

--- a/templates/palette.haml
+++ b/templates/palette.haml
@@ -9,7 +9,7 @@
     - mousedown = (e) ->
       - e.preventDefault()
       - pressedAt = +new Date
-      - activate()
+      - //activate()
     - click = (e) ->
       - delta = +new Date - pressedAt
       - e.preventDefault() if delta < 350
