:baby_bottle::snowman: Updated in browser at strd6.github.io/editor

--- a/templates/palette.haml
+++ b/templates/palette.haml
@@ -7,8 +7,10 @@
     - activate = -> activeIndex index
     - pressedAt = null
     - mousedown = (e) ->
+      - console.log(e)
       - e.preventDefault()
       - pressedAt = +new Date
+      - activate()
     - click = (e) ->
       - delta = +new Date - pressedAt
       - e.preventDefault() if delta < 350
